src/theme/_se-variable.scss
// Brand Color

$se-dark-green:             #007626  !default;
$se-logo-green:             #009530 !default;
$se-life-green:             #3DCD58 !default;
$se-medium-green:           #32AD3C !default;
$se-light-green:            #70E07C !default;
$se-dark-sky-blue :         #0087CD !default;
$se-medium-blue :           #219BFD !default;
$se-sky-blue :              #42B4E6 !default;
$se-fuchsia-red:            #B10043 !default;
$se-red:                    #DC0A0A !default;
$se-honeysuckle-orange:     #E47F00 !default;
$se-sunflower-yellow:       #FFD100 !default;
$se-sky-blue-10p:           #ECF7FC !default;
$se-red-10p:                #FCEAE7 !default;
$se-true-black:             #000000 !default;
$se-black:                  #0F0F0F !default;
$se-anthracite-grey :       #333333 !default;
$se-ultra-dark-grey:        #434343 !default;
$se-super-dark-grey :       #505559 !default;
$se-dark-grey:              #626469 !default;
$se-transparent-grey:       rgba(0,0,0,0.5) !default;
$se-transparent-gray:       $se-transparent-grey !default;
$se-medium-grey :           #9FA0A4 !default;
$se-light-grey :            #CBCBCB !default;
$se-super-light-grey:       #E6E6E6 !default;
$se-ultra-light-grey-1 :    #EDEDED !default;
$se-ultra-light-grey-2 :    #F7F7F7 !default;
$se-white:                  #FFFFFF !default;


// All SE app should follow the same warning color
$success: $se-life-green !default;
$error: $se-red !default;
$warning: $se-honeysuckle-orange !default;
$information: rgba(203, 203, 203, 0.6) !default;


// Only the seTheme should be used to change the them of the app
$seTheme: (
  'standard': $se-ultra-light-grey-1,
  'alternative': $se-white,
  'primary': $se-life-green,
  'secondary': $se-medium-blue,
  'standard-contrast': $se-black,
  'alternative-contrast': $se-black,
  'primary-contrast': $se-white,
  'secondary-contrast': $se-white,
  'critical-contrast': $se-white,

  'hover-standard': $se-super-light-grey,
  'hover-alternative': $se-super-light-grey,
  'hover-primary': $se-medium-green,
  'hover-secondary': $se-dark-sky-blue,
  'hover-standard-contrast': $se-black,
  'hover-alternative-contrast': $se-black,
  'hover-primary-contrast': $se-white,
  'hover-secondary-contrast': $se-white,
  'hover-critical-contrast': $se-white,

  'selected': $se-dark-grey,
  'selected-contrast': $se-white,

  'focus': $se-anthracite-grey,
  'focus-contrast': $se-white

) !default;





// mapping definition of the SE variables

$seColors: (
  ('se-dark-green', $se-dark-green)
  ('se-logo-green', $se-logo-green)
  ('se-life-green', $se-life-green)
  ('se-medium-green', $se-medium-green)
  ('se-light-green', $se-light-green)
  ('se-dark-sky-blue', $se-dark-sky-blue)
  ('se-medium-blue', $se-medium-blue)
  ('se-sky-blue', $se-sky-blue)
  ('se-fuchsia-red', $se-fuchsia-red)
  ('se-red', $se-red)
  ('se-honeysuckle-orange', $se-honeysuckle-orange)
  ('se-sunflower-yellow', $se-sunflower-yellow)
  ('se-sky-blue-10p', $se-sky-blue-10p)
  ('se-red-10p', $se-red-10p)
  ('se-true-black', $se-true-black)
  ('se-black', $se-black)
  ('se-anthracite-grey', $se-anthracite-grey)
  ('se-ultra-dark-grey', $se-ultra-dark-grey)
  ('se-super-dark-grey', $se-super-dark-grey)
  ('se-dark-grey', $se-dark-grey)
  ('se-transparent-gray', $se-transparent-gray)
  ('se-medium-grey', $se-medium-grey)
  ('se-light-grey', $se-light-grey)
  ('se-super-light-grey', $se-super-light-grey)
  ('se-ultra-light-grey-1', $se-ultra-light-grey-1)
  ('se-ultra-light-grey-2', $se-ultra-light-grey-2)
  ('se-white', $se-white)
  );

